aws/terraform/vpc.tf
resource "aws_subnet" "subnet" {
  vpc_id                  = "${var.vpc_id}"
  cidr_block              = "${var.subnet_cidr_block}"
  map_public_ip_on_launch = false

  tags = {
    Name = "${var.name}-subnet"
  }
}
